fixed scrollbar issue

--- a/Dev/Frontend/board/board-styling.css
+++ b/Dev/Frontend/board/board-styling.css
@@ -28,15 +28,26 @@
 }
 
 #slider{
-  display: grid;
+  /* display: grid;
   grid-template-columns: repeat(3, 0fr);
-  /* height: 100%; */
+  height: 100%;
   align-content: stretch;
     /* flex-direction: column; */
-    overflow: scroll;
+    /* overflow: scroll;
     padding: .5em;
     gap: .1em;
-    max-width: 70vw;
+    max-width: 70vw; */ 
+
+
+    display: grid;
+        grid-template-columns: repeat(3, 0fr);
+        height: 100%;
+        align-content: baseline;
+        /* flex-direction: column; */
+        overflow: auto;
+        padding: .5em;
+        gap: .1em;
+        max-width: 70vw;
 
     
 }
